--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><%= image_tag "logo.png", width: 40, height: 40 %></a>
+            <a class="navbar-brand" href="/"><%= image_tag "logo.png", width: 40, height: 40, class: "img-circle" %></a>
           </div><!-- /.navbar-header -->
 
           <div class="navbar-left">
@@ -42,8 +42,8 @@
                   <li class="navbar-brand"><%= link_to '後台管理', admin_root_path %></li>
                 <% end %>
       
-                <li class="dropdown mega-avatar">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="avatar w-32">
                       <%= image_tag(current_user.avatar.url, width: 40, height: 40, class: "img-resonsive img-circle") %>
                     </span>
@@ -51,20 +51,17 @@
                     <span class="hidden-xs">
                       <%= current_user.name %>
                     </span>
+                    <span class="caret"></span>
                   </a>
-                  <div class="dropdown-menu w dropdown-menu-scale pull-right">
+
+                  <ul class="dropdown-menu">
                     <% if current_user %>
-                      <a class="dropdown-item" href="#"><span><%= link_to('關於我', user_path(current_user)) %></span></a>
-                      
-                      <div class="dropdown-divider"></div>
-                      
-                      <a class="dropdown-item" href="#"><span><%= link_to('登出', destroy_user_session_path, method: :delete) %></span></a>
-                      
-                      <div class="dropdown-divider"></div>
-                      
-                      <a class="dropdown-item" href="#"><span><%= link_to('修改密碼', edit_user_registration_path) %></span></a>
+                      <li><%= link_to('關於我', user_path(current_user)) %></li>
+                      <li><%= link_to('登出', destroy_user_session_path, method: :delete) %></li>
+                      <li><%= link_to('修改密碼', edit_user_registration_path) %></li>
                     <% end %>
-                  </div>
+                  </ul>
+
                 </li><!-- /navbar-item --> 
               
               <% else %>   
